Blog: Fix some layout issues on backend

--- a/pillar-web/src/styles/_blog.sass
+++ b/pillar-web/src/styles/_blog.sass
@@ -44,11 +44,13 @@
 				border-top-left-radius: 3px
 				border-top-right-radius: 3px
 				margin-bottom: 15px
+				border-radius: 3px
 				+clearfix
 
 				img
 					+position-center-translate
 					width: 100%
+					border-radius: 3px
 
 				+media-xs
 					min-height: 150px
@@ -160,6 +162,7 @@
 
 			img
 				display: block
+				max-width: 100%
 
 			a
 				display: block
@@ -305,12 +308,12 @@
 		float: right
 		display: inline-block
 		+button-rounded($color-success, 6px)
-		margin: 15px 15px 0 0 !important
+		margin: 0 15px 20px 0 !important
 	.button-back
 		float: right
 		display: inline-block
 		+button-rounded($color-info, 6px)
-		margin: 15px 15px 0 0
+		margin: 0 0 20px 0
 
 #blog_container
 	&.cloud-blog
