--- a/pillar-web/src/styles/_utils.sass
+++ b/pillar-web/src/styles/_utils.sass
@@ -274,6 +274,9 @@
 		height: auto
 		min-height: 354px
 
+	iframe[src^="https://w.soundcloud"]
+		min-height: auto
+
 	// Funny, normalize.css doesn't normalize when it's outside
 	h1
 		font-size: 2.8em
